# fonciermcp

./: .env.example  Dockerfile  START.md  auth.py  docker-compose.yml  main.py  pyproject.toml  rapport.py  requirements.txt  webhook.py
helpers/: geocoder.py  http_client.py
static/: agents.html  api.html  cgu.html  fonctionnalites.html  index.html  mentions-legales.html  notaires.html  promoteurs.html  rapport-demo.html  tarifs.html
static/assets/: app.js  style.css
tools/: analyze_parcel.py  dpe.py  dvf.py  plu.py  risks.py
