[project]
name = "fonciermcp"
version = "1.0.0"
description = "FoncierMCP — Analyse foncière IA souveraine"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.9.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "httpx>=0.27.0",
    "asyncpg>=0.29.0",
    "stripe>=8.0.0",
    "python-dotenv>=1.0.0",
    "jinja2>=3.1.0",
]
[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"